Added stripe checkout logic

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -85,6 +85,7 @@
             }
         }
     </script>
+    <script src="https://checkout.stripe.com/checkout.js"></script>
     <!-- uncomment this for adding service worker
         <script>
             if ('serviceWorker' in navigator) {
